[gd_scene load_steps=3 format=2]

[ext_resource path="res://Graphic/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Script/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_left = 0.025
anchor_right = 0.975
anchor_bottom = 0.178
margin_bottom = -0.0400009
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TopBar"]
margin_top = 8.0
margin_right = 98.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Score: 100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="TopBar"]
margin_left = 102.0
margin_top = 8.0
margin_right = 201.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Score: 100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundLabel" type="Label" parent="TopBar"]
margin_left = 205.0
margin_top = 8.0
margin_right = 304.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Round: 1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
